; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/extr_mimemap.c_h2o_mimemap_get_type_by_extension.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/extr_mimemap.c_h2o_mimemap_get_type_by_extension.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32*, i32 }
%struct.TYPE_6__ = type { i32, i32 }

@extmap = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @h2o_mimemap_get_type_by_extension(%struct.TYPE_5__* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_6__, align 4
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca [256 x i8], align 16
  %7 = alloca i64, align 8
  %8 = bitcast %struct.TYPE_6__* %4 to i64*
  store i64 %1, i64* %8, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp slt i32 0, %10
  br i1 %11, label %12, label %51

12:                                               ; preds = %2
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = sext i32 %14 to i64
  %16 = icmp ult i64 %15, 256
  br i1 %16, label %17, label %51

17:                                               ; preds = %12
  %18 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %19 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @memcpy(i8* %18, i32 %20, i32 %22)
  %24 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @h2o_strtolower(i8* %24, i32 %26)
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 %30
  store i8 0, i8* %31, align 1
  %32 = load i32, i32* @extmap, align 4
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %34 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %33, i32 0, i32 1
  %35 = load i32, i32* %34, align 8
  %36 = getelementptr inbounds [256 x i8], [256 x i8]* %6, i64 0, i64 0
  %37 = call i64 @kh_get(i32 %32, i32 %35, i8* %36)
  store i64 %37, i64* %7, align 8
  %38 = load i64, i64* %7, align 8
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = call i64 @kh_end(i32 %41)
  %43 = icmp ne i64 %38, %42
  br i1 %43, label %44, label %50

44:                                               ; preds = %17
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 1
  %47 = load i32, i32* %46, align 8
  %48 = load i64, i64* %7, align 8
  %49 = call i32* @kh_val(i32 %47, i64 %48)
  store i32* %49, i32** %3, align 8
  br label %55

50:                                               ; preds = %17
  br label %51

51:                                               ; preds = %50, %12, %2
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = load i32*, i32** %53, align 8
  store i32* %54, i32** %3, align 8
  br label %55

55:                                               ; preds = %51, %44
  %56 = load i32*, i32** %3, align 8
  ret i32* %56
}

declare dso_local i32 @memcpy(i8*, i32, i32) #1

declare dso_local i32 @h2o_strtolower(i8*, i32) #1

declare dso_local i64 @kh_get(i32, i32, i8*) #1

declare dso_local i64 @kh_end(i32) #1

declare dso_local i32* @kh_val(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
